2006-08-15 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: created set_progress_info() (i actually planned
	  on adding some time remaining stuff, but xfiles is waiting ;) )

2006-08-13 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: fixed small issue with lp_partition ->geom
	  stuff sometimes losing values when going out of scope.

2006-08-13 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: couple of cleanups in operationhandling and
	  initalizing of p_filesystem.

2006-08-09 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Makefile.am: small fix to pass 'make distcheck'

2006-08-09 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/GParted_Core.h,
	  src/GParted_Core.cc: did some work on disabling of automounting of
	  removable drives. The current method is not entirely to my liking
	  but it seems to work.

2006-08-08 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* src/Dialog_Partition_Resize_Move.cc: fixed small issue with
	  shrinking of a new (virtual) partition

2006-08-08 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* implemented some stuff to find a good blocksize to use for
	  copy/move. Actually i'm not really happy with it, because probing
	  seems suboptimal, but it's better than nothing. As soon as i have
	  some time i should do some research on the subject to find a better
	  solution.
	  
2006-08-01 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Win_GParted.h,
	  src/Win_GParted.cc: construct operations in the activate*()
	  functions instead of in Add_Operation(). This approach allows for
	  more customization of operations.

2006-08-01 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: made set_partition_type() a bit more verbose
	  and did some cleanups.

2006-08-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* include/Partition.h,
	  src/Partition.cc: added get_sector()
	* src/GParted_Core.cc: use new Partition::get_sector()
