@@ -1,3 +1,7 @@
+2006-08-16 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/GParted_Core.cc: added 'time remaining' to progressfeedback.
+
 2006-08-15 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* include/GParted_Core.h,
